--- a/new-project/cardapio/style.css
+++ b/new-project/cardapio/style.css
@@ -7,13 +7,14 @@
 body{
     display: flex;
     flex-direction: column;
+    font-family: "Protest Riot", sans-serif;
     background-image:url("../images/fundo 2.jpg") ;
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center ;
     justify-content: center;
-    gap: 5vh;
-        
+    padding: 10px;
+    gap: 3vh;
     }
       
 
@@ -23,7 +24,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 4vh;
+    gap: 2vh;
 }
 
 
