--- a/new-project/pedido/style.css
+++ b/new-project/pedido/style.css
@@ -6,11 +6,14 @@
     body{
     padding: 10px;
     display: flex;
+    background-image:url("../images/fundo\ amadeirado\ pedido.jpg");
+   
+    background-size: auto;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 2vh;
-    
+    margin: 10px;
     }
     
     .error-model{
@@ -27,8 +30,8 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px ;
-    border: 3px solid rgba(130, 42,  42, 0.749);
-    background-color: black;
+    border: 3px solid rgba(212, 207, 207, 0.749);
+    background-color: rgb(232, 232, 232);
     font-size: 1.4rem;
     text-align: center;
     }
@@ -36,6 +39,8 @@
      display: none;   
      flex-direction: column;
      gap: 2vh;
+     color: aliceblue;
+     
     }
     
     .badge{
@@ -47,15 +52,26 @@
     width: 100%;
     border: none;
     border-radius: 999px;
-    color:rgba(130, 42,  42, 0.749) ;
+    color:rgba(213, 211, 211, 0.749) ;
     opacity: 0.7;
     }
     .error-btn:hover{
     opacity: 1;
     cursor: pointer;
-    box-shadow: rgba(130, 42,  42, 0.749);
+    box-shadow: rgba(223, 222, 222, 0.749);
     }
     
     .a1{
-        gap: 6vh;
+        display: flex;
+        gap: 4vh;
+        margin-top: 2vh;
+        margin-bottom: 2vh;
+    }
+
+    h1{
+        color: aliceblue;
+    }
+
+    .mb-3{
+        color: aliceblue;
     }
