--- a/new-project/menu/style.css
+++ b/new-project/menu/style.css
@@ -33,6 +33,21 @@
        justify-content: center;
        align-items: center;
        margin-bottom: 4vh;
+       animation: henrique 500ms ease-in;
+       transition: all 2s linear;
+   }
+
+   @keyframes henrique {
+    from{
+        transform: translateY(-200px);
+       transition: all 200ms linear;
+
+    }
+    to{
+        transition: all 200ms linear;
+
+    }
+    
    }
    
    
