--- a/new-project/pedido/style.css
+++ b/new-project/pedido/style.css
@@ -7,7 +7,6 @@
     padding: 10px;
     display: flex;
     background-image:url("../images/fundo\ amadeirado\ pedido.jpg");
-   
     background-size: auto;
     flex-direction: column;
     align-items: center;
@@ -75,3 +74,25 @@
     .mb-3{
         color: aliceblue;
     }
+
+    <style>
+    .rel {
+      position: relative;
+      width: 500px;
+      height: 500px;
+      overflow: hidden;
+      border: 10px solid black;
+      border-radius: 5px;
+    }
+    img {
+      /* transform: translateX(-200px); */
+      position: absolute;
+      width: auto;
+      height: 500px;
+      transition: all 800ms linear;
+    }
+    img:hover {
+      transform: scale(1.2);
+      transition: all 800ms linear;
+    }
+  </style>
